# cip-pir

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: RAID_PIRConfig.cmake.in
src/: CMakeLists.txt  config.h  parameters.h
src/CIP_PIR/CenterServer/: CentralConnectionHandler.cpp  CentralConnectionHandler.h  RAID_pirCenterServer.cpp  RAID_pirCenterServer.h  RAID_pirCenterWorker.cpp  RAID_pirCenterWorker.h
src/CIP_PIR/Client/: CIP_pirClient.cpp  CIP_pirClient.h
src/CIP_PIR/Computation/: Accelerator_CUDA.cu  Accelerator_CUDA.h  helper.cpp  helper.h
src/CIP_PIR/PeerServer/: CIP_pirServer.cpp  CIP_pirServer.h  ClientConnection.cpp  ClientConnection.h
src/application/: CMakeLists.txt  centerServer.cpp  client.cpp  database.cpp  server.cpp
src/database/: createDatabase.cpp  createDatabase.h  manageDatabase.cpp  manageDatabase.h
